# openenv_fulfillment

./: .gitignore  Dockerfile  LICENSE  README.md  inference.py  openenv.yaml  pyproject.toml  requirements.txt
deploy/gradio/: app.py  gradio_ui.py  requirements.txt
env/: __init__.py  environment.py  models.py
scripts/: baseline_agent.py  openai_baseline.py
server/: app.py
tests/: test_environment.py
